--- a/01-vagrant/Vagrantfile
+++ b/01-vagrant/Vagrantfile
@@ -1,20 +1,25 @@
 Vagrant.configure("2") do |config|
-    config.vm.box = "debian/buster64"
+  config.vm.box = "debian/buster64"
 
-    config.vm.provider "virtualbox" do |vb|
-        vb.name = "gitdemo.vagrant.vm"
-        vb.memory = "512"
-    end
+  config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "forwarded_port", guest: 80, host: 8081
 
-    config.vm.network "forwarded_port", guest: 80, host: 8082
-    config.vm.network "forwarded_port", guest: 80, host: 8083
+  config.vm.synced_folder ".", "/vagrant", disabled: true
 
-    config.vm.provision "shell", inline: <<-SHELL
-        apt-get update
-        apt-get install -y php
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = "512"
+    vb.cpus = 2
+  end
 
-    SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+      sudo apt-get update
+      sudo apt-get install -y apache2 php
 
-    config.vm.provision "file", source: "index.html", destination: "/var/www/html/index.html"
-    config.vm.provision "file", source: "index.php", destination: "/var/www/html/index.php"
+      sudo mkdir -p /var/www/html
+      sudo chown -R vagrant:vagrant /var/www/html
+  SHELL
+
+  config.vm.provision "file", source: "index.html", destination: "/var/www/html/index.html"
+  config.vm.provision "file", source: "index.php", destination: "/var/www/html/index.php"
+
 end
