--- a/01-vagrant/Vagrantfile
+++ b/01-vagrant/Vagrantfile
@@ -2,7 +2,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "debian/buster64"
 
   config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network "forwarded_port", guest: 80, host: 8081
+  config.vm.network "forwarded_port", guest: 81, host: 8081
 
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
@@ -17,6 +17,20 @@ Vagrant.configure("2") do |config|
 
       sudo mkdir -p /var/www/html
       sudo chown -R vagrant:vagrant /var/www/html
+
+      
+
+      sudo bash -c 'echo "Listen 81" >> /etc/apache2/ports.conf'
+      sudo bash -c 'echo "<VirtualHost *:81>
+        ServerAdmin webmaster@localhost
+        DocumentRoot /var/www/html/index.php
+
+
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
+        </VirtualHost>" > /etc/apache2/sites-available/000-default.conf'
+
+      sudo systemctl restart apache2
   SHELL
 
   config.vm.provision "file", source: "index.html", destination: "/var/www/html/index.html"
