--- a/01-vagrant/2/Vagrantfile
+++ b/01-vagrant/2/Vagrantfile
@@ -2,7 +2,7 @@ Vagrant.configure("2") do |config|
   
   config.vm.define "static_server" do |static_server|
     static_server.vm.box = "debian/buster64"
-    static_server.vm.network "forwarded_port", guest: 80, host: 8080
+    static_server.vm.network "private_network", ip: "192.168.56.3"
 
     static_server.vm.synced_folder ".", "/vagrant", disabled: true
 
@@ -12,11 +12,22 @@ Vagrant.configure("2") do |config|
     end
 
     static_server.vm.provision "shell", inline: <<-SHELL
-      sudo apt-get update
-      sudo apt-get install -y apache2
+    sudo apt-get update
+    sudo apt-get install -y apache2 php
 
-      sudo mkdir -p /var/www/html
-      sudo chown -R vagrant:vagrant /var/www/html
+    sudo mkdir -p /var/www/html
+    sudo chown -R vagrant:vagrant /var/www/html
+
+    sudo bash -c 'echo "<VirtualHost *:80>
+        ServerAdmin webmaster@localhost
+        DocumentRoot /var/www/html/index.html
+
+
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
+        </VirtualHost>" > /etc/apache2/sites-available/000-default.conf'
+
+      sudo systemctl restart apache2
     SHELL
 
     static_server.vm.provision "file", source: "index.html", destination: "/var/www/html/index.html"
@@ -25,7 +36,7 @@ Vagrant.configure("2") do |config|
   
   config.vm.define "dynamic_server" do |dynamic_server|
     dynamic_server.vm.box = "debian/buster64"
-    dynamic_server.vm.network "forwarded_port", guest: 80, host: 8081
+    dynamic_server.vm.network "private_network", ip: "192.168.56.2"
     
     dynamic_server.vm.synced_folder ".", "/vagrant", disabled: true
 
