--- a/02-ansible/1/Vagrantfile
+++ b/02-ansible/1/Vagrantfile
@@ -1,10 +1,14 @@
 Vagrant.configure("2") do |config|
-    config.vm.box = "debian/buster64"
-    config.vm.network "forwarded_port", guest: 80, host: 8080
-  
+    config.vm.box = "generic/centos8s"
+
     config.vm.synced_folder  ".", "/vagrant", disabled: false
   
+    config.vm.provider "virtualbox" do |vb|
+      vb.memory = "512"
+      vb.cpus = 1
+    end
+
     config.vm.provision "ansible_local" do |ansible|
-      ansible.playbook = "1/playbook.yaml"
+      ansible.playbook = "playbook.yaml"
     end
   end
