--- a/03-puppet/inventory.ini
+++ b/03-puppet/inventory.ini
@@ -1,9 +1,11 @@
 [master.puppet]
-master.puppet ansible_host=192.168.56.5
+master.puppet ansible_host=192.168.56.2
 
-[slaves]
-slave1.puppet ansible_host=192.168.56.3
-slave2.puppet ansible_host=192.168.56.4
+[slave1.puppet]
+192.168.56.3 ansible_host=192.168.56.3
+
+[slave2.puppet]
+192.168.56.4 ansible_host=192.168.56.4
 
 [all:vars]
 ansible_connection=ssh
