--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,19 +3,21 @@ name: Build Push Docker image
 on:
   push:
     #branches
+
   workflow_dispatch:
 
+
 jobs:
-  build:
-    runs-on:ubuntu-latest
+  buildandpush:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Login in GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registery: ghcr.io
+          registry: dhcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.ACTION_TOKEN }}
 
