--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          repository: devops-hometasks/other-repo
+          path: devops-hometasks/other-repo
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -23,7 +26,8 @@ jobs:
           password: ${{ secrets.ACTION_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t wcg:${{ github.sha }} -t wcg:latest -f Dockerfile.multi .
+        run: docker build -t wcg:${{ github.sha }} -t wcg:latest -f other-repo/Dockerfile.multi .
+        #docker build -t wcg:${{ github.sha }} -t wcg:latest -f Dockerfile.multi .
         #docker build -t ghcr.io/${{ github.repository_owner }}/wcg:latest -t ghcr.io/${{ github.repository_owner }}/wcg:${{ github.sha }} -f Dockerfile.multi .
 
       - name: Push Docker image
