--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
         with:
-          repository: devops-hometasks/other-repo
-          path: devops-hometasks/other-repo
+          repository: FirstAppJenkins
+          path: FirstAppJenkins
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -26,7 +26,7 @@ jobs:
           password: ${{ secrets.ACTION_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t wcg:${{ github.sha }} -t wcg:latest -f other-repo/Dockerfile.multi .
+        run: docker build -t wcg:${{ github.sha }} -t wcg:latest -f FirstAppJenkins/Dockerfile.multi .
         #docker build -t wcg:${{ github.sha }} -t wcg:latest -f Dockerfile.multi .
         #docker build -t ghcr.io/${{ github.repository_owner }}/wcg:latest -t ghcr.io/${{ github.repository_owner }}/wcg:${{ github.sha }} -f Dockerfile.multi .
 
