--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-        with:
-          repository: FirstAppJenkins
-          path: FirstAppJenkins
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -26,9 +26,11 @@ jobs:
           password: ${{ secrets.ACTION_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository_owner }}/wcg:latest -t ghcr.io/${{ github.repository_owner }}/wcg:${{ github.sha }} -f Dockerfile.multi .
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64 -t ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }} -t ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest -f Dockerfile.multi .
+          docker buildx imagetools create ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }} --tag ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/wcg:latest
-          docker push ghcr.io/${{ github.repository_owner }}/wcg:${{ github.sha }}
+          docker push ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }}
+          docker push ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest
