--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,14 @@ jobs:
           password: ${{ secrets.ACTION_TOKEN }}
 
       - name: Build Docker image
-        run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t ghcr.io/owner/wcg:ff08b15a6faf217df617263d7dea06f3d585bfee -t ghcr.io/owner/wcg:latest -f 07-docker/Dockerfile.multi --push .
-          docker buildx imagetools create ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }} --tag ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest
+        uses: docker/build-push-action@v5
+        with:
+          file: 07-docker/Dockerfile.multi
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/owner/wcg:ff08b15a6faf217df617263d7dea06f3d585bfee
+            ghcr.io/owner/wcg:latest
 
       - name: Push Docker image
         run: |
