--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,6 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/owner/wcg:ff08b15a6faf217df617263d7dea06f3d585bfee
-            ghcr.io/owner/wcg:latest
-
-      - name: Push Docker image
-        run: |
-          docker push ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }}
-          docker push ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest
+            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }}
+            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest
 #docker buildx build --platform linux/amd64,linux/arm64 -t ghcr.io/owner/wcg:ff08b15a6faf217df617263d7dea06f3d585bfee -t ghcr.io/owner/wcg:latest -f 07-docker/Dockerfile.multi .
