--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }}
-            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest
+            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }}:${{steps.get-tags.outputs.tags }}
+            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest:${{steps.get-tags.outputs.tags }}
