--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - id: string
+        uses: ASzc/change-string-case-action@v6
+        with:
+          string: ${{ github.repository_owner }}
+    
       - name: Checkout repo
         uses: actions/checkout@v2
 
@@ -31,5 +36,5 @@ jobs:
           file: 07-docker/Dockerfile.multi
           push: true
           tags: |
-            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:${{ github.sha }}:${{steps.get-tags.outputs.tags }}
-            ghcr.io/${{ env.GITHUB_REPOSITORY_OWNER }}/wcg:latest:${{steps.get-tags.outputs.tags }}
+            ghcr.io/${{ env.github.repository_owner }}/wcg:${{ github.sha }}:${{steps.get-tags.outputs.tags }}
+            ghcr.io/${{ env.github.repository_owner }}/wcg:latest:${{steps.get-tags.outputs.tags }}
