--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - id: string
-        uses: ASzc/change-string-case-action@v6
-        with:
-          string: ${{ github.repository_owner }}
-    
       - name: Checkout repo
         uses: actions/checkout@v2
 
@@ -36,5 +31,5 @@ jobs:
           file: 07-docker/Dockerfile.multi
           push: true
           tags: |
-            ghcr.io/${{ env.github.repository_owner }}/wcg:${{ github.sha }}:${{steps.get-tags.outputs.tags }}
-            ghcr.io/${{ env.github.repository_owner }}/wcg:latest:${{steps.get-tags.outputs.tags }}
+            ghcr.io/${{ github.repository_owner }}/wcg:${{ github.sha }}:${{steps.get-tags.outputs.tags }}
+            ghcr.io/${{ github.repository_owner }}/wcg:latest:${{steps.get-tags.outputs.tags }}
