--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,5 @@ jobs:
           file: 07-docker/Dockerfile.multi
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/wcg:${{ github.sha }}:${{steps.get-tags.outputs.tags }}
-            ghcr.io/${{ github.repository_owner }}/wcg:latest:${{steps.get-tags.outputs.tags }}
+            ghcr.io/${{ env.github.repository_owner }}/wcg:${{ github.sha }}:${{steps.get-tags.outputs.tags }}
+            ghcr.io/${{ env.github.repository_owner }}/wcg:latest:${{steps.get-tags.outputs.tags }}
