--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
           file: 07-docker/Dockerfile.multi
           push: true
           tags: |
-            ghcr.io/${{ env.NAME_IMAGE }}:${{ env.VERSION_IMAGE }}
-            ghcr.io/${{ env.NAME_IMAGE }}:${{ github.sha }}
+            ghcr.io/${{ env.github.repository_owner }}/wcg:${{ github.sha }}
+            ghcr.io/${{ env.github.repository_owner }}/wcg:latest
