--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
           file: 07-docker/Dockerfile.multi
           push: true
           tags: |
-            ghcr.io/${{ steps.string.outputs.lowercase }}/${{ env.github.repository_owner }}/wcg:${{ github.sha }}
-            ghcr.io/${{ steps.string.outputs.lowercase }}/${{ env.github.repository_owner }}/wcg:latest
+            ghcr.io/${{ steps.string.outputs.lowercase }}/${{ env.github.repository_owner }}:${{ env.VERSION_IMAGE }}
+            ghcr.io/${{ steps.string.outputs.lowercase }}/${{ env.github.repository_owner }}:${{ github.sha }}
