--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
-          context: akirpaniou/devops-hometasks/blob/master/07-docker/Dockerfile.multi
+          context: ./07-docker
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
