--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 env:
   NAME_IMAGE: wcg
   VERSION_IMAGE: latest
-  URL_DOCKERFILE: https://github.com/akirpaniou/devops-hometasks/tree/master/07-docker/Dockerfile.multi
+  URL_DOCKERFILE: https://github.com/akirpaniou/devops-hometasks/blob/master/07-docker/Dockerfile.multi
 
 
 jobs:
@@ -33,8 +33,9 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./07-docker
+          context: ${{ env.URL_DOCKERFILE }}
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/${{ env.NAME_IMAGE }}:${{ env.VERSION_IMAGE }}
+            ghcr.io/${{ env.NAME_IMAGE }}:${{ github.sha }}
