--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 env:
   NAME_IMAGE: wcg
   VERSION_IMAGE: latest
-  URL_DOCKERFILE: https://github.com/akirpaniou/devops-hometasks/blob/master/07-docker/Dockerfile.multi
+  URL_DOCKERFILE: https://raw.githubusercontent.com/akirpaniou/devops-hometasks/master/07-docker/Dockerfile.multi
 
 
 jobs:
