--- a/07-docker/Dockerfile.multi
+++ b/07-docker/Dockerfile.multi
@@ -1,5 +1,8 @@
 FROM golang:1.16 AS builder
 
+
+RUN apt-get update && apt-get install -y git
+
 WORKDIR /src
 
 RUN git clone https://github.com/Fenikks/word-cloud-generator.git
@@ -10,6 +13,7 @@ WORKDIR /src/word-cloud-generator
 RUN mkdir -p artifacts && CGO_ENABLED=0 GOOS=linux go build -o /src/word-cloud-generator/artifacts/word-cloud-generator -v
 
 FROM alpine:latest
+
 
 COPY --from=builder /src/word-cloud-generator/artifacts/word-cloud-generator /opt/word-cloud-generator
 
